--- a/portfolio.html
+++ b/portfolio.html
@@ -71,13 +71,22 @@
         <ul class="examples-list list">
           <li class="examples-item">
             <img class="hero-down-img" src="./images/port.jpg" alt="ноутбук" width="370" />
+            <div class="card-div">
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+              вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             <div class="examples-div">
               <h3 class="examples-title">Технокряк</h3>
-            <p class="examples-text">Веб-сайт</p>
+            <p class="examples-text">Веб-сайт</p>            
             </div>            
           </li>
           <li class="examples-item">
             <img class="hero-down-img" src="./images/port1.jpg" alt="два баскетболіста" width="370" />
+            <div class="card-div">
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                відвідувачу отримати
+                вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             <div class="examples-div">
               <h3 class="examples-title">Постер New Orlean vs Golden Star</h3>
             <p class="examples-text">Дизайн</p>
@@ -85,6 +94,11 @@
           </li>
           <li class="examples-item">
             <img class="hero-down-img" src="./images/port2.jpg" alt="лого ресторану" width="370" />
+            <div class="card-div">
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                відвідувачу отримати
+                вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             <div class="examples-div">
               <h3 class="examples-title">Ресторан Seafood</h3>
             <p class="examples-text">Додаток</p>
@@ -92,6 +106,11 @@
           </li>
           <li class="examples-item">
             <img class="hero-down-img" src="./images/port3.jpg" alt="навушники" width="370" />
+            <div class="card-div">
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                відвідувачу отримати
+                вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             <div class="examples-div">
               <h3 class="examples-title">Проєкт Prime</h3>
             <p class="examples-text">Маркетинг</p>
@@ -99,6 +118,11 @@
           </li>
           <li class="examples-item">
             <img class="hero-down-img" src="./images/port4.jpg" alt="дві коробки" width="370" />
+            <div class="card-div">
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                відвідувачу отримати
+                вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             <div class="examples-div">
               <h3 class="examples-title">Проєкт Boxes</h3>
             <p class="examples-text">Додаток</p>
@@ -106,6 +130,11 @@
           </li>
           <li class="examples-item">
             <img class="hero-down-img" src="./images/port5.jpg" alt="єкран з сайтом" width="370" />
+            <div class="card-div">
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                відвідувачу отримати
+                вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             <div class="examples-div">
               <h3 class="examples-title">Inspiration has no Borders</h3>
             <p class="examples-text">Веб-сайт</p>
@@ -113,6 +142,11 @@
           </li>
           <li class="examples-item">
             <img class="hero-down-img" src="./images/port6.jpg" alt="журнал" width="370" />
+            <div class="card-div">
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                відвідувачу отримати
+                вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             <div class="examples-div">
               <h3 class="examples-title">Видання Limited Edition</h3>
             <p class="examples-text">Дизайн</p>
@@ -120,6 +154,11 @@
           </li>
           <li class="examples-item">
             <img class="hero-down-img" src="./images/port7.jpg" alt="лейба" width="370" />
+            <div class="card-div">
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                відвідувачу отримати
+                вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             <div class="examples-div">
               <h3 class="examples-title">Проєкт LAB</h3>
             <p class="examples-text">Маркетинг</p>
@@ -127,6 +166,10 @@
           </li>
           <li class="examples-item">
             <img class="hero-down-img" src="./images/port8.jpg" alt="ноутбук з сайтом" width="370" />
+            <div class="card-div">
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+              вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             <div class="examples-div">
               <h3 class="examples-title">Growing Business</h3>
             <p class="examples-text">Додаток</p>
