--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           >
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-link link" href="./index.html">Студія</a>              
+              <a class="header-link link current" href="./index.html">Студія</a>              
             </li>
             <li class="header-item">
               <a class="header-link link" href="./portfolio.html">Портфоліо</a>
@@ -142,7 +142,7 @@
             <div class="hero-midle-container">
               <img class="hero-midle-img" src="./images/box-2.jpg" alt="вибір дизайну" width="370" />
               <div class='hero-midle-div'>
-                <p class="hero-midle-text">Десктопні додатки</p>
+                <p class="hero-midle-text">Мобільні додатки</p>
               </div>
             </div>
           </li>
@@ -150,7 +150,7 @@
             <div class="hero-midle-container">
               <img class="hero-midle-img" src="./images/box-3.jpg" alt="вибір кольору" width="370" />
               <div class='hero-midle-div'>
-                <p class="hero-midle-text">Десктопні додатки</p>
+                <p class="hero-midle-text">Дизайнерські рішення</p>
               </div>
             </div>
           </li>
