--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
               <a class="header-link link" href="./index.html">Студія</a>
             </li>
             <li class="header-item">
-              <a class="header-link link" href="./portfolio.html">Портфоліо</a>
+              <a class="header-link link current" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="header-item">
               <a class="header-link link" href="">Контакти</a>
