--- a/portfolio.html
+++ b/portfolio.html
@@ -70,22 +70,26 @@
         <!--------------------- EXAMPLES ------------------------->
         <ul class="examples-list list">
           <li class="examples-item">
-            <img class="hero-down-img" src="./images/port.jpg" alt="ноутбук" width="370" />
-            <div class="card-div">
-              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+            <div class="good-card-div">
+              <img class="hero-down-img" src="./images/port.jpg" alt="ноутбук" width="370" />
+                <div class="card-div">
+                  <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
               вичерпні відомості про компанію чи приватну особу.</p>
-            </div>
+                </div>
+            </div>            
             <div class="examples-div">
               <h3 class="examples-title">Технокряк</h3>
             <p class="examples-text">Веб-сайт</p>            
             </div>            
           </li>
           <li class="examples-item">
+            <div class="good-card-div">
             <img class="hero-down-img" src="./images/port1.jpg" alt="два баскетболіста" width="370" />
             <div class="card-div">
               <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
                 відвідувачу отримати
                 вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             </div>
             <div class="examples-div">
               <h3 class="examples-title">Постер New Orlean vs Golden Star</h3>
@@ -93,11 +97,13 @@
             </div>            
           </li>
           <li class="examples-item">
+            <div class="good-card-div">
             <img class="hero-down-img" src="./images/port2.jpg" alt="лого ресторану" width="370" />
             <div class="card-div">
               <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
                 відвідувачу отримати
                 вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             </div>
             <div class="examples-div">
               <h3 class="examples-title">Ресторан Seafood</h3>
@@ -105,11 +111,13 @@
             </div>            
           </li>
           <li class="examples-item">
+            <div class="good-card-div">
             <img class="hero-down-img" src="./images/port3.jpg" alt="навушники" width="370" />
             <div class="card-div">
               <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
                 відвідувачу отримати
                 вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             </div>
             <div class="examples-div">
               <h3 class="examples-title">Проєкт Prime</h3>
@@ -117,11 +125,13 @@
             </div>            
           </li>
           <li class="examples-item">
+            <div class="good-card-div">
             <img class="hero-down-img" src="./images/port4.jpg" alt="дві коробки" width="370" />
             <div class="card-div">
               <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
                 відвідувачу отримати
                 вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             </div>
             <div class="examples-div">
               <h3 class="examples-title">Проєкт Boxes</h3>
@@ -129,11 +139,13 @@
             </div>            
           </li>
           <li class="examples-item">
+            <div class="good-card-div">
             <img class="hero-down-img" src="./images/port5.jpg" alt="єкран з сайтом" width="370" />
             <div class="card-div">
               <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
                 відвідувачу отримати
                 вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             </div>
             <div class="examples-div">
               <h3 class="examples-title">Inspiration has no Borders</h3>
@@ -141,11 +153,13 @@
             </div>            
           </li>
           <li class="examples-item">
+            <div class="good-card-div">
             <img class="hero-down-img" src="./images/port6.jpg" alt="журнал" width="370" />
             <div class="card-div">
               <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
                 відвідувачу отримати
                 вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             </div>
             <div class="examples-div">
               <h3 class="examples-title">Видання Limited Edition</h3>
@@ -153,11 +167,13 @@
             </div>            
           </li>
           <li class="examples-item">
+            <div class="good-card-div">
             <img class="hero-down-img" src="./images/port7.jpg" alt="лейба" width="370" />
             <div class="card-div">
               <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
                 відвідувачу отримати
                 вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             </div>
             <div class="examples-div">
               <h3 class="examples-title">Проєкт LAB</h3>
@@ -165,10 +181,12 @@
             </div>            
           </li>
           <li class="examples-item">
+            <div class="good-card-div">
             <img class="hero-down-img" src="./images/port8.jpg" alt="ноутбук з сайтом" width="370" />
             <div class="card-div">
               <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
               вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
             </div>
             <div class="examples-div">
               <h3 class="examples-title">Growing Business</h3>
